Fixed length of CV button not being 100% wide on smaller devices

--- a/css/home.css
+++ b/css/home.css
@@ -100,4 +100,8 @@ html, body {
 	#title {
 		font-size: 30px;
 	}
+
+	#cv-button {
+		width: 100%;
+	}
 }
